[project]
name = "agent-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "langchain-openai>=1.1.11",
    "python-dotenv>=1.2.2",
]
